# scout-Nd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarking/: adaptive_sample_plots.py  benchmarks.py  common_data.py  cutest.py  derivative_correction_plot.py  drift_term_plot.py  evolution_plot.py  moore_plot.py  run_botorch.py  run_cbo.py  run_mf_scout.py  run_scipy.py  run_scout.py
scout-Nd/: multifidelity_objective.py  objective_function.py  stochastic_optimizer.py
scoutNd/: ackley_test.py  benchmarks.py  multifidelity_objective.py  objective_function.py  stochastic_optimizer.py  viz.py
studies/: grad_var_stdies.py
tests/: ackley_test.py  benchmarks.py  test_MF_optimization.py  test_constrained_optimization.py  test_unconstrained_optimization.py  test_viz.py
